--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "email-permutator": "^1.0.1",
     "email-verify": "^0.1.1"
+  },
+  "scripts": {
+    "wt": "wt create ./index.js --name email-verify"
   }
 }
